// Autogenerated with StateSmith.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#include "PlantEx2.h"
#include <stdbool.h> // required for `consume_event` flag
#include <string.h> // for memset

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(PlantEx2* sm, PlantEx2_StateId desired_state);

static void ROOT_enter(PlantEx2* sm);

static void NOTSHOOTING_enter(PlantEx2* sm);

static void NOTSHOOTING_exit(PlantEx2* sm);

static void CONFIGURING_enter(PlantEx2* sm);

static void CONFIGURING_exit(PlantEx2* sm);

static void CONFIGURING_evconfig(PlantEx2* sm);

static void NEWVALUEPREVIEW_enter(PlantEx2* sm);

static void NEWVALUEPREVIEW_exit(PlantEx2* sm);

static void NEWVALUEPREVIEW_evnewvaluerejected(PlantEx2* sm);

static void NEWVALUEPREVIEW_evnewvaluesaved(PlantEx2* sm);

static void STATE1_enter(PlantEx2* sm);

static void STATE1_exit(PlantEx2* sm);

static void STATE1_ev2(PlantEx2* sm);

static void STATE2_enter(PlantEx2* sm);

static void STATE2_exit(PlantEx2* sm);

static void STATE2_ev6(PlantEx2* sm);

static void STATE2_ev7(PlantEx2* sm);

static void NEWVALUESELECTION_enter(PlantEx2* sm);

static void NEWVALUESELECTION_exit(PlantEx2* sm);

static void NEWVALUESELECTION_evnewvalue(PlantEx2* sm);

static void IDLE_enter(PlantEx2* sm);

static void IDLE_exit(PlantEx2* sm);

static void IDLE_evconfig(PlantEx2* sm);


// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
void PlantEx2_ctor(PlantEx2* sm)
{
    memset(sm, 0, sizeof(*sm));
}

// Starts the state machine. Must be called before dispatching events. Not thread safe.
void PlantEx2_start(PlantEx2* sm)
{
    ROOT_enter(sm);
    // ROOT behavior
    // uml: TransitionTo(ROOT.<InitialState>)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
        // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
        
        // ROOT.<InitialState> behavior
        // uml: TransitionTo(NotShooting)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `NotShooting`.
            NOTSHOOTING_enter(sm);
            
            // NotShooting.<InitialState> behavior
            // uml: TransitionTo(Idle)
            {
                // Step 1: Exit states until we reach `NotShooting` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
                
                // Step 2: Transition action: ``.
                
                // Step 3: Enter/move towards transition target `Idle`.
                IDLE_enter(sm);
                
                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for NotShooting.<InitialState>
        } // end of behavior for ROOT.<InitialState>
    } // end of behavior for ROOT
}

// Dispatches an event to the state machine. Not thread safe.
// Note! This function assumes that the `event_id` parameter is valid.
void PlantEx2_dispatch_event(PlantEx2* sm, PlantEx2_EventId event_id)
{
    switch (sm->state_id)
    {
        // STATE: PlantEx2
        case PlantEx2_StateId_ROOT:
            // No events handled by this state (or its ancestors).
            break;
        
        // STATE: NotShooting
        case PlantEx2_StateId_NOTSHOOTING:
            // No events handled by this state (or its ancestors).
            break;
        
        // STATE: Configuring
        case PlantEx2_StateId_CONFIGURING:
            switch (event_id)
            {
                case PlantEx2_EventId_EVCONFIG: CONFIGURING_evconfig(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: NewValuePreview
        case PlantEx2_StateId_NEWVALUEPREVIEW:
            switch (event_id)
            {
                case PlantEx2_EventId_EVNEWVALUEREJECTED: NEWVALUEPREVIEW_evnewvaluerejected(sm); break;
                case PlantEx2_EventId_EVNEWVALUESAVED: NEWVALUEPREVIEW_evnewvaluesaved(sm); break;
                case PlantEx2_EventId_EVCONFIG: CONFIGURING_evconfig(sm); break; // First ancestor handler for this event
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: State1
        case PlantEx2_StateId_STATE1:
            switch (event_id)
            {
                case PlantEx2_EventId_EV2: STATE1_ev2(sm); break;
                case PlantEx2_EventId_EVCONFIG: CONFIGURING_evconfig(sm); break; // First ancestor handler for this event
                case PlantEx2_EventId_EVNEWVALUEREJECTED: NEWVALUEPREVIEW_evnewvaluerejected(sm); break; // First ancestor handler for this event
                case PlantEx2_EventId_EVNEWVALUESAVED: NEWVALUEPREVIEW_evnewvaluesaved(sm); break; // First ancestor handler for this event
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: State2
        case PlantEx2_StateId_STATE2:
            switch (event_id)
            {
                case PlantEx2_EventId_EV6: STATE2_ev6(sm); break;
                case PlantEx2_EventId_EV7: STATE2_ev7(sm); break;
                case PlantEx2_EventId_EVCONFIG: CONFIGURING_evconfig(sm); break; // First ancestor handler for this event
                case PlantEx2_EventId_EVNEWVALUEREJECTED: NEWVALUEPREVIEW_evnewvaluerejected(sm); break; // First ancestor handler for this event
                case PlantEx2_EventId_EVNEWVALUESAVED: NEWVALUEPREVIEW_evnewvaluesaved(sm); break; // First ancestor handler for this event
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: NewValueSelection
        case PlantEx2_StateId_NEWVALUESELECTION:
            switch (event_id)
            {
                case PlantEx2_EventId_EVNEWVALUE: NEWVALUESELECTION_evnewvalue(sm); break;
                case PlantEx2_EventId_EVCONFIG: CONFIGURING_evconfig(sm); break; // First ancestor handler for this event
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: Idle
        case PlantEx2_StateId_IDLE:
            switch (event_id)
            {
                case PlantEx2_EventId_EVCONFIG: IDLE_evconfig(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
    }
    
}

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(PlantEx2* sm, PlantEx2_StateId desired_state)
{
    while (sm->state_id != desired_state)
    {
        switch (sm->state_id)
        {
            case PlantEx2_StateId_NOTSHOOTING: NOTSHOOTING_exit(sm); break;
            
            case PlantEx2_StateId_CONFIGURING: CONFIGURING_exit(sm); break;
            
            case PlantEx2_StateId_NEWVALUEPREVIEW: NEWVALUEPREVIEW_exit(sm); break;
            
            case PlantEx2_StateId_STATE1: STATE1_exit(sm); break;
            
            case PlantEx2_StateId_STATE2: STATE2_exit(sm); break;
            
            case PlantEx2_StateId_NEWVALUESELECTION: NEWVALUESELECTION_exit(sm); break;
            
            case PlantEx2_StateId_IDLE: IDLE_exit(sm); break;
            
            default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
        }
    }
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ROOT
////////////////////////////////////////////////////////////////////////////////

static void ROOT_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_ROOT;
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state NOTSHOOTING
////////////////////////////////////////////////////////////////////////////////

static void NOTSHOOTING_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_NOTSHOOTING;
}

static void NOTSHOOTING_exit(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_ROOT;
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state CONFIGURING
////////////////////////////////////////////////////////////////////////////////

static void CONFIGURING_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_CONFIGURING;
}

static void CONFIGURING_exit(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_NOTSHOOTING;
}

static void CONFIGURING_evconfig(PlantEx2* sm)
{
    // Configuring behavior
    // uml: EvConfig TransitionTo(Idle)
    {
        // Step 1: Exit states until we reach `NotShooting` state (Least Common Ancestor for transition).
        exit_up_to_state_handler(sm, PlantEx2_StateId_NOTSHOOTING);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `Idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for Configuring
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state NEWVALUEPREVIEW
////////////////////////////////////////////////////////////////////////////////

static void NEWVALUEPREVIEW_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_NEWVALUEPREVIEW;
}

static void NEWVALUEPREVIEW_exit(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_CONFIGURING;
}

static void NEWVALUEPREVIEW_evnewvaluerejected(PlantEx2* sm)
{
    // NewValuePreview behavior
    // uml: EvNewValueRejected TransitionTo(NewValueSelection)
    {
        // Step 1: Exit states until we reach `Configuring` state (Least Common Ancestor for transition).
        exit_up_to_state_handler(sm, PlantEx2_StateId_CONFIGURING);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `NewValueSelection`.
        NEWVALUESELECTION_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for NewValuePreview
    
    // No ancestor handles this event.
}

static void NEWVALUEPREVIEW_evnewvaluesaved(PlantEx2* sm)
{
    // NewValuePreview behavior
    // uml: EvNewValueSaved / { show("<xml>"); } TransitionTo(NewValueSelection)
    {
        // Step 1: Exit states until we reach `Configuring` state (Least Common Ancestor for transition).
        exit_up_to_state_handler(sm, PlantEx2_StateId_CONFIGURING);
        
        // Step 2: Transition action: `show("<xml>");`.
        show("<xml>");
        
        // Step 3: Enter/move towards transition target `NewValueSelection`.
        NEWVALUESELECTION_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for NewValuePreview
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state STATE1
////////////////////////////////////////////////////////////////////////////////

static void STATE1_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_STATE1;
}

static void STATE1_exit(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_NEWVALUEPREVIEW;
}

static void STATE1_ev2(PlantEx2* sm)
{
    // State1 behavior
    // uml: 1. Ev2 TransitionTo(State2)
    {
        // Step 1: Exit states until we reach `NewValuePreview` state (Least Common Ancestor for transition).
        STATE1_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `State2`.
        STATE2_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for State1
    
    // unreachable behavior: `Ev2 [pointless & x>2] TransitionTo(State2)` due to unconditional transition above
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state STATE2
////////////////////////////////////////////////////////////////////////////////

static void STATE2_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_STATE2;
}

static void STATE2_exit(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_NEWVALUEPREVIEW;
}

static void STATE2_ev6(PlantEx2* sm)
{
    // State2 behavior
    // uml: (Ev6, Ev7) TransitionTo(State2)
    {
        // Step 1: Exit states until we reach `NewValuePreview` state (Least Common Ancestor for transition).
        STATE2_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `State2`.
        STATE2_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for State2
    
    // No ancestor handles this event.
}

static void STATE2_ev7(PlantEx2* sm)
{
    // State2 behavior
    // uml: (Ev6, Ev7) TransitionTo(State2)
    {
        // Step 1: Exit states until we reach `NewValuePreview` state (Least Common Ancestor for transition).
        STATE2_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `State2`.
        STATE2_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for State2
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state NEWVALUESELECTION
////////////////////////////////////////////////////////////////////////////////

static void NEWVALUESELECTION_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_NEWVALUESELECTION;
}

static void NEWVALUESELECTION_exit(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_CONFIGURING;
}

static void NEWVALUESELECTION_evnewvalue(PlantEx2* sm)
{
    // NewValueSelection behavior
    // uml: EvNewValue TransitionTo(NewValuePreview)
    {
        // Step 1: Exit states until we reach `Configuring` state (Least Common Ancestor for transition).
        NEWVALUESELECTION_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `NewValuePreview`.
        NEWVALUEPREVIEW_enter(sm);
        
        // NewValuePreview.<InitialState> behavior
        // uml: TransitionTo(State1)
        {
            // Step 1: Exit states until we reach `NewValuePreview` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `State1`.
            STATE1_enter(sm);
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for NewValuePreview.<InitialState>
    } // end of behavior for NewValueSelection
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state IDLE
////////////////////////////////////////////////////////////////////////////////

static void IDLE_enter(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_IDLE;
}

static void IDLE_exit(PlantEx2* sm)
{
    sm->state_id = PlantEx2_StateId_NOTSHOOTING;
}

static void IDLE_evconfig(PlantEx2* sm)
{
    // Idle behavior
    // uml: EvConfig TransitionTo(Configuring)
    {
        // Step 1: Exit states until we reach `NotShooting` state (Least Common Ancestor for transition).
        IDLE_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `Configuring`.
        CONFIGURING_enter(sm);
        
        // Configuring.<InitialState> behavior
        // uml: TransitionTo(NewValueSelection)
        {
            // Step 1: Exit states until we reach `Configuring` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `NewValueSelection`.
            NEWVALUESELECTION_enter(sm);
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Configuring.<InitialState>
    } // end of behavior for Idle
    
    // No ancestor handles this event.
}

// Thread safe.
char const * PlantEx2_state_id_to_string(PlantEx2_StateId id)
{
    switch (id)
    {
        case PlantEx2_StateId_ROOT: return "ROOT";
        case PlantEx2_StateId_NOTSHOOTING: return "NOTSHOOTING";
        case PlantEx2_StateId_CONFIGURING: return "CONFIGURING";
        case PlantEx2_StateId_NEWVALUEPREVIEW: return "NEWVALUEPREVIEW";
        case PlantEx2_StateId_STATE1: return "STATE1";
        case PlantEx2_StateId_STATE2: return "STATE2";
        case PlantEx2_StateId_NEWVALUESELECTION: return "NEWVALUESELECTION";
        case PlantEx2_StateId_IDLE: return "IDLE";
        default: return "?";
    }
}

// Thread safe.
char const * PlantEx2_event_id_to_string(PlantEx2_EventId id)
{
    switch (id)
    {
        case PlantEx2_EventId_EV2: return "EV2";
        case PlantEx2_EventId_EV6: return "EV6";
        case PlantEx2_EventId_EV7: return "EV7";
        case PlantEx2_EventId_EVCONFIG: return "EVCONFIG";
        case PlantEx2_EventId_EVNEWVALUE: return "EVNEWVALUE";
        case PlantEx2_EventId_EVNEWVALUEREJECTED: return "EVNEWVALUEREJECTED";
        case PlantEx2_EventId_EVNEWVALUESAVED: return "EVNEWVALUESAVED";
        default: return "?";
    }
}
