@startuml PlantEx2
' from https://plantuml.com/state-diagram
scale 350 width
[*] --> NotShooting

state NotShooting {
  [*] -> Idle
  Idle --> Configuring : EvConfig
  Configuring --> Idle : EvConfig
}

state Configuring {
  [*] -> NewValueSelection
  NewValueSelection --> NewValuePreview : EvNewValue
  NewValuePreview --> NewValueSelection : EvNewValueRejected
  NewValuePreview --> NewValueSelection : EvNewValueSaved / show("<xml>");

  state NewValuePreview {
    [*] -> State1
    State1 -> State2 : Ev2 [pointless & x>2]
    State1 -> State2 : 1. Ev2 [ IsMatch('<xml>') ]
    State2 -> State2 : (Ev6, Ev7)
  }

}
@enduml
